# uw-s3

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/dependency-audit/: SKILL.md
.claude/skills/make-slides/: SKILL.md
.claude/skills/sync-docs/: SKILL.md
docs/: SECURITY.md
docs/superpowers/specs/: 2026-05-22-lite-spec-intent-folders-design.md  2026-06-05-auto-endpoint-routing-design.md
experiments/s3fs_eval/: README.md  results.md  try_s3fs_fuse.sh  try_s3fs_python.py
experiments/tui_audit/: findings.md  smoke_test.md
scripts/: install.sh  install_rclone.sh  migrate_credentials.py  release.py
specs/: 1_CONSTITUTION.md  2_INTENT.md  3_DECISIONS.md  CONSTITUTION.md  DECISIONS.md
specs/2_INTENT/IT-1-tui-audit/: intent.md
specs/2_INTENT/IT-2-s3fs-migration/: intent.md
specs/2_INTENT/IT-3-mount-survival/: intent.md
specs/2_INTENT/IT-4-backup-restore-cli/: intent.md
specs/INTENT/I-1-tui-audit/: intent.md
src/uw_s3/: __init__.py  backup_ops.py  bucket_registry.py  cli.py  client.py  credentials.py  mount_backend.py  mount_worker.py  mounts_config.py  preferences.py  rclone.py  s3_router.py  updater.py  validators.py
tests/: test_app_cleanup.py  test_backup_ops.py  test_bucket_registry.py  test_credentials.py  test_mount_backend.py  test_mount_worker.py  test_mounts_config.py  test_preferences.py  test_rclone.py  test_s3_router.py  test_sync_config.py  test_sync_engine.py  test_sync_models.py  test_tui.py  test_updater.py  test_uws3.py  test_validators.py  test_worker_mount.py
(+27 files in other folders)
