[project]
name = "uw-s3"
version = "0.1.0"
description = "Terminal UI for UW-Madison Research Object Storage (S3)"
readme = "README.md"
authors = [
    { name = "Jason Lo", email = "lcmjlo@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "minio>=7.2.0",
    "python-dotenv>=1.2.2",
    "textual>=4.0.0",
    "keyring>=25.0.0",
]

[project.scripts]
uw-s3 = "uw_s3.cli:main"

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.4",
    "ty>=0.0.20",
]
